--- a/src/app/components/menu-bar/menu-bar.component.css
+++ b/src/app/components/menu-bar/menu-bar.component.css
@@ -6,6 +6,6 @@ flex-direction: row;
 
 .container__menu-bar > ul > li {
     margin-right: 30px;
-    list-style: nome;
+    list-style: none;
 
     }
